--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -143,21 +143,12 @@ Solving this linear program for $\alpha$, we obtain the linear separator shown i
 \begin{figure}
 \centering
 \includegraphics[width=2.25in]{plots/1-1.png}
-\caption{test}
+\caption{The separator and margin computed by our SVM implementation using a small example.}
 \end{figure}
 
 \subsection{Applications}
 
-Next, we try out our implementation on four different data sets, each consisting of 400 points. The first three data sets, which we will refer to as \texttt{stdev1}, \texttt{stdev2}, \texttt{stdev4}, consist of points where each of the negative and positive examples are generated from a Gaussian distribution with varying standard deviations (as suggested by the name). The final data set, \texttt{nonSep}, is a data set generated as to be impossible to separate with a linear separator.
-
-For each of these data sets we will use a value of $C = 1$, and we will show the resulting boundary on both a training and validation set. We will also report the training and validation error rates. We begin with \texttt{stdev1}.
-
-Figures 2(a) and 2(b) show the decision boundary formed by our algorithm on the training and validation data, respectively. As we can clearly see, both the training and validation data have an error rate of 0. This is not surprising given the very large gap between positive and negative samples.
-
-Figure 2 also shows the results of repeating the process with \texttt{stdev2} and \texttt{stdev4}. For \texttt{stdev2}, the training error rate was 9.25\% and the validation error rate was 8.25\%. For \texttt{stdev4}, the training error rate was 26.5\% and validation error rate 23.5\%.
-
-We can clearly see from the plots that \texttt{stdev2} and \texttt{stdev4} are not linearly separable (both in training and validation data), and thus we are not surprised by the increased error rates. It is interesting to note that the training data has higher error rates than the validation data in both cases. However, since both training data and validation data were drawn from Gaussian distributions, this is not terribly unlikely and does not surprise us.
-
+Next, we try out our implementation on four different data sets, each consisting of 400 points for each of the training, validation, and test sets. The first three data sets, which we will refer to as \texttt{stdev1}, \texttt{stdev2}, \texttt{stdev4}, consist of points where each of the negative and positive examples are generated from a Gaussian distribution with varying standard deviations (as suggested by the name). The final data set, \texttt{nonSep}, is a data set generated as to be impossible to separate with a linear separator.
 
 \begin{figure*}[!ht]
 \centering
@@ -192,8 +183,17 @@ We can clearly see from the plots that \texttt{stdev2} and \texttt{stdev4} are n
 	\caption{\texttt{stdev4} Validation Data}
 \end{subfigure} \\
 \end{tabular}
-\caption{test}
+\caption{The separators computed by our SVM implementation on a variety of different data sets with $C = 1$.}
 \end{figure*}
+
+For each of these data sets we will use a value of $C = 1$, and we will show the resulting boundary on both a training and validation set. We will also report the training and validation error rates. We begin with \texttt{stdev1}.
+
+Figures 2(a) and 2(b) show the decision boundary formed by our algorithm on the training and validation data, respectively. As we can clearly see, both the training and validation data have an error rate of 0. This is not surprising given the very large gap between positive and negative samples.
+
+Figure 2 also shows the results of repeating the process with \texttt{stdev2} and \texttt{stdev4}. For \texttt{stdev2}, the training error rate was 9.25\% and the validation error rate was 8.25\%. For \texttt{stdev4}, the training error rate was 26.5\% and validation error rate 23.5\%.
+
+We can clearly see from the plots that \texttt{stdev2} and \texttt{stdev4} are not linearly separable (both in training and validation data), and thus we are not surprised by the increased error rates. It is interesting to note that the training data has higher error rates than the validation data in both cases. However, since both training data and validation data were drawn from Gaussian distributions, this is not terribly unlikely and does not surprise us.
+
 
 Next, we focus on \texttt{nonSep}. The resulting decision boundaries are shown in Figure 3. Clearly, this data is ill-fitted for classification via a linear separator.
 
@@ -209,14 +209,14 @@ Next, we focus on \texttt{nonSep}. The resulting decision boundaries are shown i
 	\includegraphics[width = 2.25in]{plots/1-2/nonSep2valid.png}
 	\caption{\texttt{nonSep} Validation Data}
 \end{subfigure}
-
+\caption{The resulting linear separator when the data is not linearly separable.}
 \end{figure}
 
 With a training error of 48.5\%, we can see that the separator is barely able to do a better job than randomly guessing how to classify each point. On the validation data, we see an error rate of 50.75\%. Because we have an error rate of over 50\%, we could have done a better job if we guessed the exact opposite of what our trained separator suggested. If we were not sure form the plot of the data that this data was not well suited to be classified using a linear separator, then the very high error rates convince us that this is in fact the case.
 
 \subsection{Kernels}
 
-Next, we extended our dual form SVM to operate with kernels. We experimented on our data using the Gaussian kernel, with a variety of values for $C$ and $\beta$. For each data set, we found the values of $C$ and $\beta$ which minimization the validation error rate. We repeated this experiment for the linear kernel, again using the validation error rate to tune $C$. The results are summarized in Figure 4.
+Next, we extended our dual form SVM to operate with kernels. We experimented on our data using the Gaussian kernel, with a variety of values for $C$ and $\beta$. For each data set, we found the values of $C$ and $\beta$ which minimized the validation error rate (see the next section for a discussion of this decision). We repeated this experiment for the linear kernel, again using the validation error rate to tune $C$. The results are summarized in Figure 4.
 
 \begin{figure*}
 \centering
@@ -258,24 +258,24 @@ Next, we extended our dual form SVM to operate with kernels. We experimented on 
 \end{subfigure}
 \end{tabular}
 
-\caption{test}
+\caption{The parameters which minimized validation error rates for both the linear kernel and the Gaussian kernel on each data set. The number of support vectors resulting from these parameters and the test error rate are also shown.}
 \end{figure*}
 
-To get an idea for how the classifier works using a Gaussian kernel, Figure xx shows the resulting classifier for \texttt{stdev1} and \texttt{nonSep}. We can clearly see that the classifier is no longer linear. In addition, we can see that on this allows for it to handle the \texttt{nonSep} data in a way which the linear separator could not.
+To get an idea for how the classifier works using a Gaussian kernel, Figure xx shows the resulting classifier for \texttt{stdev1} and \texttt{nonSep}. We can clearly see that the classifier is no longer linear. In addition, we can see that this allows for it to handle the \texttt{nonSep} data in a way which the linear separator could not.
 
 \begin{figure}
 \centering
 
 \begin{subfigure}[b]{2.25in}
 	\includegraphics[width = 2.25in]{plots/1-3/stdev1opttrain.png}
-	\caption{$C = 0.01$}
+	\caption{\texttt{stdev1} Training Data}
 \end{subfigure}
 
 \begin{subfigure}[b]{2.25in}
 	\includegraphics[width = 2.25in]{plots/1-3/caseychart.png}
-	\caption{$C = 100$}
+	\caption{\texttt{nonSep} Training Data}
 \end{subfigure}
-
+\caption{The resulting separators when using the Gaussian kernel (with the optimal parameters shown in Figure 4).}
 \end{figure}
 
 For \texttt{stdev1}, \texttt{tdev2}, and \texttt{stdev4}, we can see that the test error rates resulting from both the Gaussian and linear kernels are very similar. From looking at the data sets, it seems that a linear separator is the most appropriate choice for the data. Thus, even when we apply a Gaussian separator, which allows a lot more flexibility, we still find that the linear separator performs roughly equally well.
@@ -288,11 +288,11 @@ It is interesting to note that for all data sets other than \texttt{stdev1} (whi
 
 \subsection{Analyzing C}
 
-Next, performed experiments to analyze the effects of varying $C$. Our goal is to examine how the value of $C$ affects the value of the geometric margin and the number of support vectors chosen using the linear kernel. Note that the notion of geometric margin does not make sense for the Gaussian kernel. However, we note that the dependence of the number of support vectors on $C$ was similar in the Gaussian kernel as in the linear kernel. We will show our results for data sets \texttt{stdev1} and \texttt{stdev2}. The results for the other two data sets are similar, so we do not display them here.
+Next, we performed experiments to analyze the effects of varying $C$. The purpose was to examine how the value of $C$ affects the value of the geometric margin and the number of support vectors chosen. Because the notion of geometric margin does not make sense for the Gaussian kernel, we performed these experiments using the linear kernel. However, we note that the dependence of the number of support vectors on $C$ was similar in the Gaussian kernel as in the linear kernel. We will show our results for data sets \texttt{stdev1} and \texttt{stdev2}. The results for the other two data sets are similar, so we do not display them here.
 
 For each of \texttt{stdev1} and \texttt{stdev2}, we used $C$ in the set $\{0.01, 0.1, 1, 10, 100\}$, and computed the geometric margin and total number of support vectors. As a general trend, both the geometric margin and the number of support vectors decreased as we increased $C$. % Increasing C means less slack
 
-We can see this in Figure xx, which shows the separator defined by $C = 0.01$ and $C = 100$ for \texttt{stdev1}. We can clearly see that the increased value of $C$ results in a margin smaller margin, and consequently must fewer vectors are support vectors.
+We can see this in Figure xx, which shows the separator defined by $C = 0.01$ and $C = 100$ for \texttt{stdev1}. We can clearly see that the increased value of $C$ results in a smaller margin, and consequently much fewer vectors are support vectors.
 
 \begin{figure}
 \centering
@@ -306,7 +306,7 @@ We can see this in Figure xx, which shows the separator defined by $C = 0.01$ an
 	\includegraphics[width = 2.25in]{plots/varyingC/100.png}
 	\caption{$C = 100$}
 \end{subfigure}
-
+\caption{The effects of $C$ on the separator for \texttt{stdev1}, shown on the training data. We can see that the smaller $C$ leads to a much wider margin and more support vectors.}
 \end{figure}
 
 Figure xx shows geometric margin and number of support vectors plotted as a function of $C$. Note that the $x$ axis is shown on a log scale for convenience. We can see that both the geometric margin and number of support vectors seem to decrease to a point and then level off. This is because as we increase $C$, we decrease the amount of slack that we allow. As $C$ approaches infinity, we approach the situation where we do not allow any slack.
@@ -323,7 +323,7 @@ Figure xx shows geometric margin and number of support vectors plotted as a func
 	\includegraphics[width = 2.25in]{plots/1-3/support_vectors.png}
 	\caption{Number of Support Vectors}
 \end{subfigure}
-
+\caption{TEST}
 \end{figure}
 
 We know that a support vector machine aims to maximize the size of the margin. Thus, a seemingly reasonable idea would be to use $C$ to maximize the value of the margin on the training data. However, from the trends we see above, this seems that it would just result in the choice of an arbitrarily small value for $C$, which we would have no reason to expect to perform well on the validation or test data.
@@ -344,7 +344,7 @@ We implemented multi-class support vector machines using the one-versus-the-rest
 
 Moving forward with the linear kernel, we begin training the model on the training set and using the validation error rate to tune the value of $C$. Because solving the quadratic program with the support vector machine takes prohibitive amounts of time when run on our training set of 5,040 points, we used a smaller subset of the training and validation sets to tune $C$ (1000 points each).
 
-We found that the best value of $C$ was $C = 1$. Figure xx shows the resulting validation errors for various values of $C$. With this set, we were able to achieve a success rate of xx\% on the test data (when trained on the subsets of training and validation data).
+We found that the best value of $C$ was $C = 1$. Figure xx shows the resulting validation errors for various values of $C$. 
 
 \begin{figure}
 \renewcommand*{\arraystretch}{1.5}
